--- a/srcs/requirements/redis/conf/redis.conf
+++ b/srcs/requirements/redis/conf/redis.conf
@@ -594,7 +594,7 @@ maxmemory 256mb
 #
 # The default is:
 #
-maxmemory-policy allkeys-lru # replace old keys with fresher ones
+#maxmemory-policy allkeys-lru # replace old keys with fresher ones
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
