--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.7"
 
 services:
   nginx: # service name
-    container_name: nginx
+    image: nginx
+    container_name: nginx_c
     build: ./requirements/nginx
     volumes:
       - web-data:/var/www/html
@@ -14,12 +15,11 @@ services:
     env_file: .env
     extra_hosts:
       - "${DOMAIN_NAME}:127.0.0.1" # created in /etc/hosts
-    dns_search:
-      - suahn.42.fr
     depends_on:
       - wordpress
   mariadb:
-    container_name: mariadb
+    image: mariadb
+    container_name: mariadb_c
     build: ./requirements/mariadb
     volumes:
       - db-data:/var/lib/mysql
@@ -29,13 +29,14 @@ services:
       - "3306"
       - "8080"
   wordpress:
-    container_name: wordpress
+    image: wordpress
+    container_name: wordpress_c
     build: ./requirements/wordpress
     volumes:
-      - web-data:/var/www/html # host:container
+      - web-data:/var/www/html
     restart: unless-stopped
-    stdin_open: true # -i
-    tty: true # -t
+    stdin_open: true # i
+    tty: true # t
     env_file: .env
     expose:
       - "3306"
@@ -44,27 +45,18 @@ services:
     depends_on:
       - mariadb
   adminer:
-    container_name: adminer
-    build: ./requirements/adminer
+    image: adminer
+    container_name: adminer_c
+    build: ./requirements/bonus/adminer
     volumes:
       - web-data:/var/www/html
     restart: unless-stopped
-    stdin_open: true # -i
-    tty: true # -t
+    stdin_open: true
+    tty: true
     ports:
       - "8080:8080/tcp"
     depends_on:
       - mariadb
-  redis:
-    container_name: redis
-    build: ./requirements/redis
-    restart: unless-stopped
-    stdin_open: true # -i
-    tty: true # -t
-    ports:
-      - "6379:6379/tcp"
-    depends_on:
-      - wordpress
 
 volumes:
   db-data:
