--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,8 +7,9 @@ RUN apt-get update \
     && apt-get install -y nginx \
     && apt-get install -y openssl
 #CONFIG NGINX & SSL
+COPY conf/nginx.conf /etc/nginx/
 RUN rm /etc/nginx/sites-enabled/default
-COPY conf/default /etc/nginx/sites-enabled/suahn.42.fr
+COPY conf/suahn.42.fr /etc/nginx/sites-enabled/
 RUN mkdir -p /etc/nginx/ssl \
     && openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout \
     /etc/nginx/ssl/ssl_cert.key -out /etc/nginx/ssl/ssl_cert.crt \
