--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -9,12 +9,15 @@ RUN apt-get update \
 
 EXPOSE 3306/tcp
 
-WORKDIR /etc/mysql
-COPY conf/50-server.cnf ./mariadb.conf.d/
-COPY tools/setup.sql .
+COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/
+
+WORKDIR /
+
+COPY conf/setup.sql .
 RUN ["chmod", "755", "setup.sql"]
 RUN service mysql start && sudo mysql < setup.sql
-#mysql user gains access yto the data file
+
+#mysql user gains access to the data file
 RUN chown -R mysql:mysql /var/lib/mysql
 
 CMD ["mysqld"]
