--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -11,16 +11,18 @@ RUN apt-get update \
     && apt-get install -y php8.2-fpm php8.2-common php8.2-cli php8.2-mysqli \
     php8.2-opcache php8.2-mbstring php8.2-xml php8.2-gd php8.2-curl
 
-WORKDIR /var/www/html
-#INSTALL WP-CLI
-RUN wget -P . https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-    && chmod +x ./wp-cli.phar && sudo mv ./wp-cli.phar /usr/local/bin/wp
-#CONFIG WORDPRESS
-COPY conf/www.conf /etc/php/8.2/fpm/pool.d/
-COPY tools/setup.sh .
-RUN ["chmod", "755", "setup.sh"]
-
 EXPOSE 3306/tcp
 EXPOSE 9000/tcp
 
-CMD bash ./setup.sh && service php8.2-fpm start && php -a
+WORKDIR /var/www/html
+
+#CONFIG WORDPRESS
+COPY conf/www.conf /etc/php/8.2/fpm/pool.d/
+
+#INSTALL WP-CLI
+RUN wget -P ~/ https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+    && chmod +x ~/wp-cli.phar && sudo mv ~/wp-cli.phar /usr/local/bin/wp
+COPY tools/setup.sh .
+RUN ["chmod", "755", "setup.sh"]
+
+CMD bash ./setup.sh; service php8.2-fpm start; php -a
