--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -20,7 +20,6 @@ RUN service mysql start && sudo mysql < setup.sql
 #mysql user gains access to the data file
 RUN chown -R mysql:mysql /var/lib/mysql
 RUN mkdir -p /var/run/mysqld
-RUN chown -R mysql:mysql /var/lib/mysqld
-
+RUN chown -R mysql:mysql /var/run/mysqld
 
 CMD ["mysqld"]
